# function-homerun2-pitcher

./: .commitlintrc.yaml  .gitignore  .pre-commit-config.yaml  .releaserc.yaml  .yamllint  CHANGELOG.md  Dockerfile  README.md  Taskfile.yaml  catalog-info.yaml  mkdocs.yml  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: build-scan-image.yaml  build-test.yaml  cleanup-pr-artifacts.yaml  e2e.yaml  lint-repo.yaml  release.yaml
docs/: cicd.md  configuration.md  e2e-testing.md  index.md  troubleshooting.md  usage.md
examples/: README.md  function.yaml  runtimeconfig.yaml  secret.yaml  watchoperation.yaml
function/: __init__.py  __version__.py  fn.py  main.py
function/input/: __init__.py
function/input/v1alpha1/: __init__.py  pitch_input.py
package/: crossplane.yaml
package/input/: fn.homerun.io_pitchinputs.yaml
tests/: conftest.py  test_fn.py
tests/e2e/: test_pitch.py
tests/e2e/manifests/: omni-pitcher.yaml  redis.yaml  watchoperation.yaml
tests/e2e/scripts/: dump.sh  up.sh
