[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "function-homerun2-pitcher"
description = "Crossplane v2 Operation function that pitches watched-resource events to homerun2-omni-pitcher"
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = "Apache-2.0"
keywords = ["crossplane", "operation", "homerun", "pitcher"]
authors = [{ name = "stuttgart-things", email = "info@stuttgart-things.io" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

dependencies = [
  "crossplane-function-sdk-python==0.11.0",
  "click==8.3.2",
  "grpcio>=1.73.1",
  "httpx==0.28.1",
  "pydantic==2.10.4",
]

dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/stuttgart-things/function-homerun2-pitcher#readme"
Issues = "https://github.com/stuttgart-things/function-homerun2-pitcher/issues"
Source = "https://github.com/stuttgart-things/function-homerun2-pitcher"

[project.scripts]
function = "function.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["function"]

[tool.hatch.version]
path = "function/__version__.py"
validate-bump = false

[tool.hatch.envs.default]
type = "virtual"
path = ".venv-default"
dependencies = [
  "ipython==9.4.0",
  "pytest==8.3.4",
  "pytest-asyncio==0.25.2",
  "pytest-cov==6.0.0",
  "respx==0.22.0",
]

[tool.hatch.envs.default.scripts]
development = "python function/main.py --insecure --debug"
test = "pytest -m 'not e2e' {args:tests}"
test-cov = "pytest -m 'not e2e' --cov=function --cov-report=term-missing --cov-report=xml {args:tests}"
test-e2e = "pytest -v -m e2e {args:tests/e2e}"

[tool.hatch.envs.hatch-static-analysis]
dependencies = ["ruff==0.12.7"]
config-path = "none"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
  "e2e: end-to-end tests requiring a running kind cluster (run via `task e2e:test`)",
]

[tool.coverage.run]
branch = true
source = ["function"]

[tool.ruff]
target-version = "py311"
exclude = ["function/proto/*"]

[tool.ruff.lint]
select = [
  "A", "ARG", "ASYNC", "B", "C", "D", "DTZ", "E", "EM", "ERA", "F",
  "FBT", "I", "ICN", "ISC", "N", "PLC", "PLE", "PLR", "PLW", "Q",
  "RUF", "S", "T", "TID", "UP", "W", "YTT",
]
ignore = ["ISC001"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "S", "PLC0415"]

[tool.ruff.lint.isort]
known-first-party = ["function"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pep8-naming]
extend-ignore-names = ["RunFunction"]
